--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
     <title>Noticias de Videojuegos -  Maquetación 3</title>
 </head>
 <body>
-    
+    <!--Barra superior decorativa-->
+    <div class="decoration-bar"></div>
+
+    <!--Estructura principal-->
+    <div class="layout">
+
+        <!--Cabecera-->
+        <header class="layout__header">
+            <div class="header__title">
+                <a href="#" class="header__link">
+                    <img src="./assets/img/logo1.png" class="header__img" alt="Logo" />
+                </a>
+            </div>
+        </header>
+    </div>
+
+    <!--Pie de pagina-->
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
