HTML - Estructura submenu carrusel

--- a/index.html
+++ b/index.html
@@ -69,6 +69,79 @@
                             </ul>
 
                             <!--Carrusel imagenes-->
+                            <div class="submenu__carousel">
+                                <ul class="carousel__menu  carousel__menu--small">
+                                    <!--Elemento del carrusel-->
+                                    <li class="carousel__item">
+                                        <!--Imagen-->
+                                        <img src="./assets/img/game-1.jpg" class="corousel__img" alt="imagen submenu" />
+                                        
+                                        <!--Puntuacion-->
+                                        <div class="carousel__container-rating">
+                                            <div class="container-raiting__circle">
+                                                <div class="container-raiting__border">
+                                                    <span class="container-rating__mark">9</span>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <!--Titulo-->
+                                        <div class="carousel__detail">
+                                            <h3 class=" carousel__title">
+                                                <a href="#" class="carousel__link">
+                                                    ¿Battlefield 2042 es el mejor de la saga?
+                                                </a>
+                                            </h3>
+                                        </div>
+                                    </li>
+
+                                    <!--Elemento del carrusel-->
+                                    <li class="carousel__item">
+                                        <!--Imagen-->
+                                        <img src="./assets/img/game-2.webp" class="corousel__img" alt="imagen submenu" /> 
+
+                                        <!--Titulo-->
+                                        <div class="carousel__detail">
+                                            <h3 class=" carousel__title">
+                                                <a href="#" class="carousel__link">
+                                                    ¿Eldenring es el mejor juego del año?
+                                                </a>
+                                            </h3>
+                                        </div>
+                                    </li>
+
+                                    <!--Elemento del carrusel-->
+                                    <li class="carousel__item">
+                                        <!--Imagen-->
+                                        <img src="./assets/img/game-3.jpg" class="corousel__img" alt="imagen submenu" />                                        
+                                        
+
+                                        <!--Titulo-->
+                                        <div class="carousel__detail">
+                                            <h3 class=" carousel__title">
+                                                <a href="#" class="carousel__link">
+                                                    ¿The Last of us 1 remake es mejor que el original?
+                                                </a>
+                                            </h3>
+                                        </div>
+                                    </li>
+
+                                    <!--Elemento del carrusel-->
+                                    <li class="carousel__item">
+                                        <!--Imagen-->
+                                        <img src="./assets/img/game-4.jpg" class="corousel__img" alt="imagen submenu" />
+
+                                        <!--Titulo-->
+                                        <div class="carousel__detail">
+                                            <h3 class=" carousel__title">
+                                                <a href="#" class="carousel__link">
+                                                    Review de Dying Light 2
+                                                </a>
+                                            </h3>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
