--- a/index.html
+++ b/index.html
@@ -380,16 +380,147 @@
                         <a href="#" class="navbar__link">
                             CATEGORIAS
                         </a>
+
+                        <div class="navbar__submenu navbar__submenu--small">
+                            <ul class="navbar__sublist">
+                                <li class="sublist__item">
+                                    <a href="#" class="sublist__link">Acción</a>
+                                </li>
+                                <li class="sublist__item">
+                                    <a href="#" class="sublist__link">Sandbox</a>
+
+                                    <ul class="sublist__dropdown">
+                                        <li class="dropdown__item">
+                                            <a href="#" class="dropdown__link">
+                                                Aventuras
+                                            </a>
+                                        </li>
+                                        <li class="dropdown__item">
+                                            <a href="#" class="dropdown__link">
+                                                Conducción
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="sublist__item">
+                                    <a href="#" class="sublist__link">Lucha</a>
+                                </li>
+                                <li class="sublist__item">
+                                    <a href="#" class="sublist__link">Carreras</a>
+                                </li>
+                            </ul>
+
+                        </div>
                     </li>
 
                     <li class="navbar__item">
                         <a href="#" class="navbar__link">
                             RANKING
                         </a>
+
+                        <div class="navbar__submenu">
+                            <div class="submenu__carousel">
+                                <ul class="carousel__menu">
+
+                                    <!--Elemento del carrusel-->
+                                    <li class="carousel__item">
+                                        <!--Imagen-->
+                                        <div class="carousel__container-img">
+                                            <img src="./assets/img/game-14.jpg" class="corousel__img" alt="imagen submenu" />
+                                        </div>
+
+                                        <!--Titulo-->
+                                        <div class="carousel__detail">
+                                            <h3 class=" carousel__title">
+                                                <a href="#" class="carousel__link">
+                                                    Trailer Biomutant
+                                                </a>
+                                            </h3>
+                                        </div>
+                                    </li>
+
+                                    <!--Elemento del carrusel-->
+                                    <li class="carousel__item">
+                                        <!--Imagen-->
+                                        <div class="carousel__container-img">
+                                            <img src="./assets/img/game-15.jpg" class="corousel__img" alt="imagen submenu" />
+                                        </div> 
+
+                                        <!--Titulo-->
+                                        <div class="carousel__detail">
+                                            <h3 class=" carousel__title">
+                                                <a href="#" class="carousel__link">
+                                                    Analisis Little Night
+                                                </a>
+                                            </h3>
+                                        </div>
+                                    </li>
+
+                                    <!--Elemento del carrusel-->
+                                    <li class="carousel__item">
+                                        <!--Imagen-->
+                                        <div class="carousel__container-img">
+                                            <img src="./assets/img/game-16.jpg" class="corousel__img" alt="imagen submenu" />
+                                        </div> 
+
+                                        <!--Titulo-->
+                                        <div class="carousel__detail">
+                                            <h3 class=" carousel__title">
+                                                <a href="#" class="carousel__link">
+                                                    Gameplay WWE 2K24 
+                                                </a>
+                                            </h3>
+                                        </div>
+                                    </li>
+
+                                    <!--Elemento del carrusel-->
+                                    <li class="carousel__item">
+                                        <!--Imagen-->
+                                        <div class="carousel__container-img">
+                                            <img src="./assets/img/game-17.jpg" class="corousel__img" alt="imagen submenu" />
+                                        </div> 
+
+                                        <!--Titulo-->
+                                        <div class="carousel__detail">
+                                            <h3 class=" carousel__title">
+                                                <a href="#" class="carousel__link">
+                                                   Red Dead Redemption 2 - El mejor juego de la historia
+                                                </a>
+                                            </h3>
+                                        </div>
+                                    </li>
+
+                                    <!--Elemento del carrusel-->
+                                    <li class="carousel__item">
+                                        <!--Imagen-->
+                                        <div class="carousel__container-img">
+                                            <img src="./assets/img/game-18.jpg" class="corousel__img" alt="imagen submenu" />
+                                        </div> 
+
+                                        <!--Titulo-->
+                                        <div class="carousel__detail">
+                                            <h3 class=" carousel__title">
+                                                <a href="#" class="carousel__link">
+                                                    Trailer Riders Republic
+                                                </a>
+                                            </h3>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                 </ul>
 
-                <form class="navbar__search"></form>
+                <form class="navbar__search">
+                    <input type="text" class="search__input" name="search" placeholder="Buscar" />
+
+                    <div class="navbar__btn--search">
+                        <a href="#" class="navbar__button">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </a>
+                    </div>
+                </form>
             </nav>
         </div>
     </div>
