--- a/index.html
+++ b/index.html
@@ -592,6 +592,97 @@
                 </ul>
             </div>
         </section>
+
+        <!--Slider-->
+        <section class="layout__slider">
+            <article class="slider__container slider__container--slider1">
+                <a href="#" class="slider__link">
+                    <img src="./assets/img/slider-1.jpg" class="slider__img" />
+                </a>
+
+                <div class="slider__info">
+                    <a href="#" class="slider__category">
+                        JUEGOS
+                    </a>
+                    <div class="slider__line"></div>
+                    <h2 class="slider__title">
+                        <a href="#" class="slider__link--title">Mejores juegos de 2024</a>
+                    </h2>
+                </div>
+
+                <div class="slider__rating">
+                    <div class="rating__circle">
+                        <div class="rating__border">
+                            <span class="rating__mark">6</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+
+            <article class="slider__container slider__container--slider2">
+                <a href="#" class="slider__link">
+                    <img src="./assets/img/slider-2.jpg" class="slider__img" />
+                </a>
+
+                <div class="slider__info">
+                    <a href="#" class="slider__category">
+                        JUEGOS
+                    </a>
+                    <div class="slider__line"></div>
+                    <h2 class="slider__title">
+                        <a href="#" class="slider__link--title">Review The Last Of Us Remake</a>
+                    </h2>
+                </div>                
+            </article>
+
+            <article class="slider__container slider__container--slider3">
+                <a href="#" class="slider__link">
+                    <img src="./assets/img/slider-3.jpeg" class="slider__img" />
+                </a>
+
+                <div class="slider__info">
+                    <a href="#" class="slider__category">
+                        JUEGOS
+                    </a>
+                    <div class="slider__line"></div>
+                    <h2 class="slider__title">
+                        <a href="#" class="slider__link--title">Microsoft compra Activision</a>
+                    </h2>
+                </div>                
+            </article>
+
+            <article class="slider__container slider__container--slider4">
+                <a href="#" class="slider__link">
+                    <img src="./assets/img/slider-4.jpg" class="slider__img" />
+                </a>
+
+                <div class="slider__info">
+                    <a href="#" class="slider__category">
+                        JUEGOS
+                    </a>
+                    <div class="slider__line"></div>
+                    <h2 class="slider__title">
+                        <a href="#" class="slider__link--title">Review Battlefield 2042</a>
+                    </h2>
+                </div>                
+            </article>
+
+            <article class="slider__container slider__container--slider5">
+                <a href="#" class="slider__link">
+                    <img src="./assets/img/slider-5.png" class="slider__img" />
+                </a>
+
+                <div class="slider__info">
+                    <a href="#" class="slider__category">
+                        JUEGOS
+                    </a>
+                    <div class="slider__line"></div>
+                    <h2 class="slider__title">
+                        <a href="#" class="slider__link--title">Mejores Skins de Valorant</a>
+                    </h2>
+                </div>                
+            </article>
+        </section>
     </div>
 
     <!--Pie de pagina-->
