--- a/index.html
+++ b/index.html
@@ -683,6 +683,150 @@
                 </div>                
             </article>
         </section>
+
+        <!--Mejores Momentos-->
+        <section class="layout__highlights">
+            <header class="highlights__subheader">
+                <h3 class="subheader__title">Mejores momentos de los videojuegos</h3>
+            </header>
+
+            <div class="highlights__posts">
+                <article class="highlights__post">
+                    <div class="highlights__image">
+                        <a href="#" class="highlights__image-link">
+                            <img src="./assets/img/highlight-2.jpg" class="highlights__img"/>
+                        </a>
+
+                        <div class="highlights__category">
+                            <a href="#" class="highlights__name-category">Juegos</a>
+                        </div>
+                    </div>
+
+                    <div class="highlights__detail">
+                        <h3 class="highlights__title">
+                            <a href="#" class="highlights__link">Mejor juego de todos los tiempos</a>
+                        </h3>
+
+                        <div class="highlights__meta">
+                            <a href="#" class="highlights__author">Victor</a>
+                            <span class="highlights__date">Septiembre 21, 2024</span>
+                        </div>
+
+                        <p class="highlights__description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus fuga tempore iste, iusto blanditiis alias ipsum saepe nulla quis dolorem. Est deserunt iure, culpa quam possimus aut architecto veniam cumque!
+                        </p>
+
+                        <footer class="highlights__footer-post">
+                            <div class="footer-post__container">
+                                <div class="footer-post__views">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <span>1720</span>
+                                </div>
+
+                                <div class="footer-post__comments">
+                                    <i class="fa-solid fa-comment"></i>
+                                    <a href="#" class="comments__number">5</a>
+                                </div>
+                            </div>
+
+                            <div class="footer-post__fread-more">
+                                <a href="#" class="read-more__btn">Leer más</a>
+                            </div>
+                        </footer>
+                    </div>
+                </article>
+
+                <article class="highlights__post">
+                    <div class="highlights__image">
+                        <a href="#" class="highlights__image-link">
+                            <img src="./assets/img/highlight-1.jpg" class="highlights__img"/>
+                        </a>
+
+                        <div class="highlights__category">
+                            <a href="#" class="highlights__name-category">Juegos</a>
+                        </div>
+                    </div>
+
+                    <div class="highlights__detail">
+                        <h3 class="highlights__title">
+                            <a href="#" class="highlights__link">God of War - El verdadero nombre de Atreus</a>
+                        </h3>
+
+                        <div class="highlights__meta">
+                            <a href="#" class="highlights__author">Victor</a>
+                            <span class="highlights__date">Octubre 27, 2024</span>
+                        </div>
+
+                        <p class="highlights__description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus fuga tempore iste, iusto blanditiis alias ipsum saepe nulla quis dolorem. Est deserunt iure, culpa quam possimus aut architecto veniam cumque!
+                        </p>
+
+                        <footer class="highlights__footer-post">
+                            <div class="footer-post__container">
+                                <div class="footer-post__views">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <span>1720</span>
+                                </div>
+
+                                <div class="footer-post__comments">
+                                    <i class="fa-solid fa-comment"></i>
+                                    <a href="#" class="comments__number">5</a>
+                                </div>
+                            </div>
+
+                            <div class="footer-post__fread-more">
+                                <a href="#" class="read-more__btn">Leer más</a>
+                            </div>
+                        </footer>
+                    </div>
+                </article>
+
+                <article class="highlights__post">
+                    <div class="highlights__image">
+                        <a href="#" class="highlights__image-link">
+                            <img src="./assets/img/highlight-3.jpg" class="highlights__img"/>
+                        </a>
+
+                        <div class="highlights__category">
+                            <a href="#" class="highlights__name-category">Juegos</a>
+                        </div>
+                    </div>
+
+                    <div class="highlights__detail">
+                        <h3 class="highlights__title">
+                            <a href="#" class="highlights__link">Final - The Last Of Us</a>
+                        </h3>
+
+                        <div class="highlights__meta">
+                            <a href="#" class="highlights__author">Victor</a>
+                            <span class="highlights__date">Diciembre 12, 2024</span>
+                        </div>
+
+                        <p class="highlights__description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus fuga tempore iste, iusto blanditiis alias ipsum saepe nulla quis dolorem. Est deserunt iure, culpa quam possimus aut architecto veniam cumque!
+                        </p>
+
+                        <footer class="highlights__footer-post">
+                            <div class="footer-post__container">
+                                <div class="footer-post__views">
+                                    <i class="fa-solid fa-eye"></i>
+                                    <span>1720</span>
+                                </div>
+
+                                <div class="footer-post__comments">
+                                    <i class="fa-solid fa-comment"></i>
+                                    <a href="#" class="comments__number">5</a>
+                                </div>
+                            </div>
+
+                            <div class="footer-post__fread-more">
+                                <a href="#" class="read-more__btn">Leer más</a>
+                            </div>
+                        </footer>
+                    </div>
+                </article>
+            </div>
+        </section>
     </div>
 
     <!--Pie de pagina-->
