--- a/index.html
+++ b/index.html
@@ -1091,6 +1091,163 @@
                 </li>
             </ul>
         </section>
+
+        <!--Contenido Principal-->
+        <main class="layout__main">
+            <section class="main__news">
+                <header class="news__subheader">
+                    <h3 class="news__title">Noticias</h3>
+                </header>
+
+                <div class="news__posts">
+                    <article class="news__main-post">
+                        <div class="main-post__image">
+                            <a href="#" class="main-post__link-image">
+                                <img src="./assets/img/news-1.jpg" class="main-post__img" />
+                            </a>
+
+                            <div class="main-post__container-category">
+                                <a href="#" class="main-post__category">Noticias</a>
+                            </div>
+                        </div>
+
+                        <div class="main-post__info">
+                            <h3 class="main-post__title">
+                                <a href="#" class="main-post__link-title">
+                                    Nuevas filtraciones GTA 6
+                                </a>
+                            </h3>
+
+                            <div class="main-post__meta">
+                                <div class="main-post__container">
+                                    <a href="#" class="main-post__author">
+                                        Victor
+                                    </a>
+                                </div>
+
+                                <span class="main-post__date">Febrero 4, 2024</span>
+                            </div>
+
+                            <p class="main-post__description">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos iure, autem voluptatum, sint harum consectetur aut itaque dolorum tempora aliquam beatae blanditiis alias recusandae, atque voluptates nam nemo maiores inventore!
+                            </p>
+
+                            <div class="main-post__footer-info">
+                                <div class="footer-info__container">
+                                    <div class="main-post__views">
+                                        <i class="fa-solid fa-eye"></i>
+                                        <span class="main-post__number-views">8200</span>
+                                    </div>
+
+                                    <div class="main-post__comments">
+                                        <i class="fa-solid fa-comments"></i>
+                                        <span class="main-post__number-comments">10</span>
+                                    </div>
+                                </div>
+
+                                <div class="main_post__read-more">
+                                    <a href="#" class="main-post__btn">
+                                        Leer más
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+
+                    <div class="news__list">
+                        <article class="news__post">
+                            <div class="news__image">
+                                <a href="#" class="news__link-image">
+                                    <img src="./assets/img/news-2.jpg" class="news__img" />
+                                </a>
+                            </div>
+
+                            <div class="news__detail">
+                                <h4 class="news__title-post">
+                                    <a href="#" class="news__link-title">
+                                        Lanzamientos más esperados para 2024
+                                    </a>
+                                </h4>
+
+                                <div class="news__data">
+                                    <a href="#" class="news__author">Victor</a>
+
+                                    <span class="news__date">Marzo 25, 2024</span>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="news__post">
+                            <div class="news__image">
+                                <a href="#" class="news__link-image">
+                                    <img src="./assets/img/news-3.jpg" class="news__img" />
+                                </a>
+                            </div>
+
+                            <div class="news__detail">
+                                <h4 class="news__title-post">
+                                    <a href="#" class="news__link-title">
+                                        Requisitos minimos FC24 para PC
+                                    </a>
+                                </h4>
+
+                                <div class="news__data">
+                                    <a href="#" class="news__author">Victor</a>
+
+                                    <span class="news__date">Abril 10, 2024</span>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="news__post">
+                            <div class="news__image">
+                                <a href="#" class="news__link-image">
+                                    <img src="./assets/img/news-4.jpg" class="news__img" />
+                                </a>
+                            </div>
+
+                            <div class="news__detail">
+                                <h4 class="news__title-post">
+                                    <a href="#" class="news__link-title">
+                                        Especificaciones PS5 Slim confirmadas
+                                    </a>
+                                </h4>
+
+                                <div class="news__data">
+                                    <a href="#" class="news__author">Victor</a>
+
+                                    <span class="news__date">Agosto 25, 2024</span>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="news__post">
+                            <div class="news__image">
+                                <a href="#" class="news__link-image">
+                                    <img src="./assets/img/news-5.jpg" class="news__img" />
+                                </a>
+                            </div>
+
+                            <div class="news__detail">
+                                <h4 class="news__title-post">
+                                    <a href="#" class="news__link-title">
+                                        Spiderman 2 saldrá exclusivamente en PS5
+                                    </a>
+                                </h4>
+
+                                <div class="news__data">
+                                    <a href="#" class="news__author">Victor</a>
+
+                                    <span class="news__date">Octubre 25, 2023</span>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+
+
+            </section>
+        </main>
     </div>
 
     <!--Pie de pagina-->
