--- a/index.html
+++ b/index.html
@@ -1094,6 +1094,8 @@
 
         <!--Contenido Principal-->
         <main class="layout__main">
+            
+            <!--Seccion de noticias-->
             <section class="main__news">
                 <header class="news__subheader">
                     <h3 class="news__title">Noticias</h3>
@@ -1246,6 +1248,127 @@
                 </div>
 
 
+            </section>
+
+            <!--Sección de Juegos-->
+            <section class="main__games">
+                <header class="games__subheader">
+                    <h3 class="subheader__title">Juegos</h3>
+                </header>
+
+                <div class="games__container">
+                    <article class="games__game">
+                        <div class="game__container-image">
+                            <a href="#" class="game__link-image">
+                                <img src="./assets/img/main-game-1.jpg" class="game__img" />
+                            </a>
+
+                            <div class="game__rating">
+                                <div class="rating__circle">
+                                    <div class="rating__border">
+                                        <span class="rating__mark">7</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="game__container-category">
+                            <a href="#" class="game__category">Juegos</a>
+                        </div>
+
+                        <div class="game__details">
+                            <h3 class="game__title">
+                                <a href="game__link-title">
+                                    Análisis de FarCry 6
+                                </a>
+                            </h3>
+                        </div>
+                    </article>
+
+                    <article class="games__game">
+                        <div class="game__container-image">
+                            <a href="#" class="game__link-image">
+                                <img src="./assets/img/main-game-2.jpg" class="game__img" />
+                            </a>
+
+                            <div class="game__rating">
+                                <div class="rating__circle">
+                                    <div class="rating__border">
+                                        <span class="rating__mark">6</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="game__container-category">
+                            <a href="#" class="game__category">Juegos</a>
+                        </div>
+
+                        <div class="game__details">
+                            <h3 class="game__title">
+                                <a href="game__link-title">
+                                    Como es la PS5 por dentro
+                                </a>
+                            </h3>
+                        </div>
+                    </article>
+
+                    <article class="games__game">
+                        <div class="game__container-image">
+                            <a href="#" class="game__link-image">
+                                <img src="./assets/img/main-game-3.jpg" class="game__img" />
+                            </a>
+
+                            <div class="game__rating">
+                                <div class="rating__circle">
+                                    <div class="rating__border">
+                                        <span class="rating__mark">8</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="game__container-category">
+                            <a href="#" class="game__category">Juegos</a>
+                        </div>
+
+                        <div class="game__details">
+                            <h3 class="game__title">
+                                <a href="game__link-title">
+                                    Como es la XBox por dentro
+                                </a>
+                            </h3>
+                        </div>
+                    </article>
+
+                    <article class="games__game">
+                        <div class="game__container-image">
+                            <a href="#" class="game__link-image">
+                                <img src="./assets/img/main-game-4.jpg" class="game__img" />
+                            </a>
+
+                            <div class="game__rating">
+                                <div class="rating__circle">
+                                    <div class="rating__border">
+                                        <span class="rating__mark">5</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="game__container-category">
+                            <a href="#" class="game__category">Juegos</a>
+                        </div>
+
+                        <div class="game__details">
+                            <h3 class="game__title">
+                                <a href="game__link-title">
+                                    Como es la Switch por dentro
+                                </a>
+                            </h3>
+                        </div>
+                    </article>
+                </div>
             </section>
         </main>
     </div>
