--- a/index.html
+++ b/index.html
@@ -2001,8 +2001,198 @@
     </div>
 
     <!--Pie de pagina-->
-    <footer class="footer">
+    <footer class="layout__footer">
+        <div class="footer__container">
+            <section class="footer__left-container">
+                <div class="footer__about">
+                    <h3 class="about__title">SOBRE NOSOTROS</h3>
 
+                    <p class="about__description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, at modi officia expedita nostrum porro doloremque suscipit sed, aliquid quas odio facilis saepe, earum alias natus magni ipsa error! Dignissimos!
+                    </p>
+                </div>
+
+                <div class="footer__tags">
+                    <h3 class="tags__title">Etiquetas</h3>
+
+                    <div class="tags__container">
+                        <a href="#" class="tags__tag">Aventura</a>
+                        <a href="#" class="tags__tag">Lucha</a>
+                        <a href="#" class="tags__tag">Plataformas</a>
+                        <a href="#" class="tags__tag">RPG</a>
+                        <a href="#" class="tags__tag">Mundo Libre</a>
+                        <a href="#" class="tags__tag">Shooter</a>
+                        <a href="#" class="tags__tag">Survival</a>
+                        <a href="#" class="tags__tag">Aventura</a>
+                        <a href="#" class="tags__tag">Lucha</a>
+                        <a href="#" class="tags__tag">Plataformas</a>
+                        <a href="#" class="tags__tag">RPG</a>
+                        <a href="#" class="tags__tag">Mundo Libre</a>
+                        <a href="#" class="tags__tag">Shooter</a>
+                        <a href="#" class="tags__tag">Survival</a>
+                        <a href="#" class="tags__tag">Aventura</a>
+                        <a href="#" class="tags__tag">Lucha</a>
+                        <a href="#" class="tags__tag">Plataformas</a>
+                        <a href="#" class="tags__tag">RPG</a>
+                        <a href="#" class="tags__tag">Mundo Libre</a>
+                        <a href="#" class="tags__tag">Shooter</a>
+                        <a href="#" class="tags__tag">Survival</a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="footer__center-container">
+                <h3 class="footer__title">Post Populares</h3>
+
+                <ul class="footer__list-popular">
+                    <li class="list-popular__item">
+                        <div class="list-popular__container-img">
+                            <a href="#" class="list-popular__link-img">
+                                <img src="./assets/img/popular-1.jpg" class="list-popular__img" />
+                            </a>
+                        </div>
+
+                        <div class="list-popular__detail">
+                            <h4 class="list-popular__title">
+                                Mejor juego del año
+                            </h4>
+
+                            <div class="list-popular__container-info">
+                                <a href="#" class="list-popular__author">Victor</a>
+
+                                <div class="list-poular__meta-info">
+                                    <div class="list-popular__views">
+                                        <i class="fa-solid fa-eye"></i>
+                                        <span class="list-popular__number-views">1620</span>
+                                    </div>
+
+                                    <div class="list-popular__comments">
+                                        <i class="fa-solid fa-comments"></i>
+                                        <span class="list-popular__number-comments">16</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="list-popular__item">
+                        <div class="list-popular__container-img">
+                            <a href="#" class="list-popular__link-img">
+                                <img src="./assets/img/popular-2.jpg" class="list-popular__img" />
+                            </a>
+                        </div>
+
+                        <div class="list-popular__detail">
+                            <h4 class="list-popular__title">
+                                Mejor juego del año
+                            </h4>
+
+                            <div class="list-popular__container-info">
+                                <a href="#" class="list-popular__author">Victor</a>
+
+                                <div class="list-poular__meta-info">
+                                    <div class="list-popular__views">
+                                        <i class="fa-solid fa-eye"></i>
+                                        <span class="list-popular__number-views">1620</span>
+                                    </div>
+
+                                    <div class="list-popular__comments">
+                                        <i class="fa-solid fa-comments"></i>
+                                        <span class="list-popular__number-comments">16</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="list-popular__item">
+                        <div class="list-popular__container-img">
+                            <a href="#" class="list-popular__link-img">
+                                <img src="./assets/img/popular-3.jpg" class="list-popular__img" />
+                            </a>
+                        </div>
+
+                        <div class="list-popular__detail">
+                            <h4 class="list-popular__title">
+                                Mejor juego del año
+                            </h4>
+
+                            <div class="list-popular__container-info">
+                                <a href="#" class="list-popular__author">Victor</a>
+
+                                <div class="list-poular__meta-info">
+                                    <div class="list-popular__views">
+                                        <i class="fa-solid fa-eye"></i>
+                                        <span class="list-popular__number-views">1620</span>
+                                    </div>
+
+                                    <div class="list-popular__comments">
+                                        <i class="fa-solid fa-comments"></i>
+                                        <span class="list-popular__number-comments">16</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="list-popular__item">
+                        <div class="list-popular__container-img">
+                            <a href="#" class="list-popular__link-img">
+                                <img src="./assets/img/popular-4.jpg" class="list-popular__img" />
+                            </a>
+                        </div>
+
+                        <div class="list-popular__detail">
+                            <h4 class="list-popular__title">
+                                Mejor juego del año
+                            </h4>
+
+                            <div class="list-popular__container-info">
+                                <a href="#" class="list-popular__author">Victor</a>
+
+                                <div class="list-poular__meta-info">
+                                    <div class="list-popular__views">
+                                        <i class="fa-solid fa-eye"></i>
+                                        <span class="list-popular__number-views">1620</span>
+                                    </div>
+
+                                    <div class="list-popular__comments">
+                                        <i class="fa-solid fa-comments"></i>
+                                        <span class="list-popular__number-comments">16</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="footer__right-container">
+                <h3 class="footer__title">Último Post</h3>
+
+                <div class="footer__slider">
+                    <img src="./assets/img/slider-footer.jpg" class="slider__img" />
+
+                    <div class="slider__info">
+                        <h4 class="slider__category">Juegos</h4>
+
+                        <div class="slider__separator"></div>
+
+                        <h3 class="slider__title">
+                            <a href="#" class="slider__link">
+                                Trailer FC24
+                            </a>
+                        </h3>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <section class="footer__description">
+            <div class="footer__text">
+                &copy; Copyright 2024. Todos los derechos reservados a Victor Robles WEB.
+            </div>
+        </section>
     </footer>
 </body>
 </html>
