--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
 
                         <div class="game__details">
                             <h3 class="game__title">
-                                <a href="game__link-title">
+                                <a href="#" class="game__link-title">
                                     Análisis de FarCry 6
                                 </a>
                             </h3>
@@ -1306,7 +1306,7 @@
 
                         <div class="game__details">
                             <h3 class="game__title">
-                                <a href="game__link-title">
+                                <a href="#" class="game__link-title">
                                     Como es la PS5 por dentro
                                 </a>
                             </h3>
@@ -1334,7 +1334,7 @@
 
                         <div class="game__details">
                             <h3 class="game__title">
-                                <a href="game__link-title">
+                                <a href="#" class="game__link-title">
                                     Como es la XBox por dentro
                                 </a>
                             </h3>
@@ -1362,7 +1362,7 @@
 
                         <div class="game__details">
                             <h3 class="game__title">
-                                <a href="game__link-title">
+                                <a href="#" class="game__link-title">
                                     Como es la Switch por dentro
                                 </a>
                             </h3>
