--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
 
     <!--JavaScript-->
+    <script src="./assets/js/main.js" defer></script>
+    <script src="./assets/js/marquee.js" defer></script>
 
     <title>Noticias de Videojuegos -  Maquetación 3</title>
 </head>
